--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@ GCI
 </head>
 
 <body>
-some links
+  <p>Introduction :</p>
+  <ol>
+    <li><a href="https://my-sagemaker-bucket-1.s3.amazonaws.com/1.+Introduction/1+Who+should+take+this+course.html" target="_blank">Link</a></li>
+    <li></li>
+  </ol>
+  
+  
+  
 </body>
 
 </html>
