--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ GCI
   <p>Introduction :</p>
   <ol>
     <li><a href="https://my-sagemaker-bucket-1.s3.amazonaws.com/1.+Introduction/1+Who+should+take+this+course.html" target="_blank">Link</a></li>
-    <li></li>
+    <li><a href="https://my-sagemaker-bucket-1.s3.amazonaws.com/1.+Introduction/2+Course+Overview+-+Grokking+the+Coding+Interview_+Patterns+for+Coding+Questions.html" target="_blank">Link</a></li>
   </ol>
   
   
